# sheepfish_test_task

./: .env-example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/printing/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/printing/migrations/: 0001_initial.py
templates/wkhtmltopdf/: check.html
test_task/: celery.py  settings.py  urls.py
